--- a/src/styles.css
+++ b/src/styles.css
@@ -10,99 +10,99 @@ body {
 }
 
 :root {
-    --background: oklch(1.0000 0 0);
-    --foreground: oklch(0.2101 0.0318 264.6645);
-    --card: oklch(1.0000 0 0);
-    --card-foreground: oklch(0.2101 0.0318 264.6645);
-    --popover: oklch(1.0000 0 0);
-    --popover-foreground: oklch(0.2101 0.0318 264.6645);
-    --primary: oklch(0.6716 0.1368 48.5130);
+    --background: oklch(0.9940 0 0);
+    --foreground: oklch(0 0 0);
+    --card: oklch(0.9940 0 0);
+    --card-foreground: oklch(0 0 0);
+    --popover: oklch(0.9911 0 0);
+    --popover-foreground: oklch(0 0 0);
+    --primary: oklch(0.5969 0.1890 285.0812);
     --primary-foreground: oklch(1.0000 0 0);
-    --secondary: oklch(0.5360 0.0398 196.0280);
-    --secondary-foreground: oklch(1.0000 0 0);
-    --muted: oklch(0.9670 0.0029 264.5419);
-    --muted-foreground: oklch(0.5510 0.0234 264.3637);
-    --accent: oklch(0.9491 0 0);
-    --accent-foreground: oklch(0.2101 0.0318 264.6645);
-    --destructive: oklch(0.6368 0.2078 25.3313);
-    --destructive-foreground: oklch(0.9851 0 0);
-    --border: oklch(0.9276 0.0058 264.5313);
-    --input: oklch(0.9276 0.0058 264.5313);
-    --ring: oklch(0.6716 0.1368 48.5130);
-    --chart-1: oklch(0.5940 0.0443 196.0233);
-    --chart-2: oklch(0.7214 0.1337 49.9802);
-    --chart-3: oklch(0.8721 0.0864 68.5474);
-    --chart-4: oklch(0.6268 0 0);
-    --chart-5: oklch(0.6830 0 0);
-    --sidebar: oklch(0.9670 0.0029 264.5419);
-    --sidebar-foreground: oklch(0.2101 0.0318 264.6645);
-    --sidebar-primary: oklch(0.6716 0.1368 48.5130);
+    --secondary: oklch(1.0000 0 0);
+    --secondary-foreground: oklch(0.1344 0 0);
+    --muted: oklch(0.9702 0 0);
+    --muted-foreground: oklch(0.4386 0 0);
+    --accent: oklch(1.0000 0 0);
+    --accent-foreground: oklch(0.6375 0.1149 244.4201);
+    --destructive: oklch(0.6803 0.1233 8.5196);
+    --destructive-foreground: oklch(1.0000 0 0);
+    --border: oklch(1.0000 0 0);
+    --input: oklch(0.9401 0 0);
+    --ring: oklch(0 0 0);
+    --chart-1: oklch(0.7395 0.1174 152.3198);
+    --chart-2: oklch(0.5969 0.1890 285.0812);
+    --chart-3: oklch(0.7082 0.1347 39.0902);
+    --chart-4: oklch(0.6807 0.1033 244.7483);
+    --chart-5: oklch(0.5590 0 0);
+    --sidebar: oklch(1.0000 0 0);
+    --sidebar-foreground: oklch(0 0 0);
+    --sidebar-primary: oklch(0 0 0);
     --sidebar-primary-foreground: oklch(1.0000 0 0);
-    --sidebar-accent: oklch(1.0000 0 0);
-    --sidebar-accent-foreground: oklch(0.2101 0.0318 264.6645);
-    --sidebar-border: oklch(0.9276 0.0058 264.5313);
-    --sidebar-ring: oklch(0.6716 0.1368 48.5130);
-    --font-sans: system-ui, Geist Mono, ui-monospace, monospace;
-    --font-serif: serif;
-    --font-mono: JetBrains Mono, monospace;
-    --radius: 0.75rem;
-    --shadow-2xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
-    --shadow-xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
-    --shadow-sm: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
-    --shadow: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
-    --shadow-md: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 2px 4px -1px hsl(0 0% 0% / 0.05);
-    --shadow-lg: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 4px 6px -1px hsl(0 0% 0% / 0.05);
-    --shadow-xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 8px 10px -1px hsl(0 0% 0% / 0.05);
-    --shadow-2xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.13);
-    --tracking-normal: 0rem;
-    --spacing: 0.25rem;
+    --sidebar-accent: oklch(0.9401 0 0);
+    --sidebar-accent-foreground: oklch(0 0 0);
+    --sidebar-border: oklch(0.9401 0 0);
+    --sidebar-ring: oklch(0 0 0);
+    --font-sans: Plus Jakarta Sans, sans-serif;
+    --font-serif: Lora, serif;
+    --font-mono: IBM Plex Mono, monospace;
+    --radius: 1rem;
+    --shadow-2xs: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.08);
+    --shadow-xs: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.08);
+    --shadow-sm: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-md: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 2px 4px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-lg: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 4px 6px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-xl: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 8px 10px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-2xl: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.40);
+    --tracking-normal: -0.025em;
+    --spacing: 0.27rem;
 }
 
 .dark {
-    --background: oklch(0.2350 0.0043 308.1928);
-    --foreground: oklch(0.8109 0 0);
-    --card: oklch(0.2050 0 0);
-    --card-foreground: oklch(0.8109 0 0);
-    --popover: oklch(0.2350 0.0043 308.1928);
-    --popover-foreground: oklch(0.8109 0 0);
-    --primary: oklch(0.7214 0.1337 49.9802);
-    --primary-foreground: oklch(0.2350 0.0043 308.1928);
-    --secondary: oklch(0.5940 0.0443 196.0233);
-    --secondary-foreground: oklch(0.2350 0.0043 308.1928);
-    --muted: oklch(0.2520 0 0);
-    --muted-foreground: oklch(0.6268 0 0);
-    --accent: oklch(0.3211 0 0);
-    --accent-foreground: oklch(0.8109 0 0);
-    --destructive: oklch(0.5940 0.0443 196.0233);
-    --destructive-foreground: oklch(0.2350 0.0043 308.1928);
-    --border: oklch(0.3520 0 0);
-    --input: oklch(0.3520 0 0);
-    --ring: oklch(0.7214 0.1337 49.9802);
-    --chart-1: oklch(0.5940 0.0443 196.0233);
-    --chart-2: oklch(0.7214 0.1337 49.9802);
-    --chart-3: oklch(0.8721 0.0864 68.5474);
-    --chart-4: oklch(0.6268 0 0);
-    --chart-5: oklch(0.6830 0 0);
-    --sidebar: oklch(0.2050 0 0);
-    --sidebar-foreground: oklch(0.8109 0 0);
-    --sidebar-primary: oklch(0.7214 0.1337 49.9802);
-    --sidebar-primary-foreground: oklch(0.2350 0.0043 308.1928);
-    --sidebar-accent: oklch(0.3211 0 0);
-    --sidebar-accent-foreground: oklch(0.8109 0 0);
-    --sidebar-border: oklch(0.2520 0 0);
-    --sidebar-ring: oklch(0.7214 0.1337 49.9802);
-    --font-sans: system-ui, Geist Mono, ui-monospace, monospace;
-    --font-serif: serif;
-    --font-mono: JetBrains Mono, monospace;
-    --radius: 0.75rem;
-    --shadow-2xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
-    --shadow-xs: 0px 1px 4px 0px hsl(0 0% 0% / 0.03);
-    --shadow-sm: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
-    --shadow: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 1px 2px -1px hsl(0 0% 0% / 0.05);
-    --shadow-md: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 2px 4px -1px hsl(0 0% 0% / 0.05);
-    --shadow-lg: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 4px 6px -1px hsl(0 0% 0% / 0.05);
-    --shadow-xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.05), 0px 8px 10px -1px hsl(0 0% 0% / 0.05);
-    --shadow-2xl: 0px 1px 4px 0px hsl(0 0% 0% / 0.13);
+    --background: oklch(0.2376 0.0036 228.9515);
+    --foreground: oklch(0.9551 0 0);
+    --card: oklch(0.2756 0.0047 247.9979);
+    --card-foreground: oklch(0.9551 0 0);
+    --popover: oklch(0.2756 0.0047 247.9979);
+    --popover-foreground: oklch(0.9551 0 0);
+    --primary: oklch(0.7003 0.1383 288.0130);
+    --primary-foreground: oklch(1.0000 0 0);
+    --secondary: oklch(0.3162 0.0099 260.7134);
+    --secondary-foreground: oklch(0.9551 0 0);
+    --muted: oklch(0.3162 0.0099 260.7134);
+    --muted-foreground: oklch(0.7058 0 0);
+    --accent: oklch(0.3102 0.0265 244.3187);
+    --accent-foreground: oklch(0.8700 0.0599 226.7022);
+    --destructive: oklch(0.7845 0.0928 8.3461);
+    --destructive-foreground: oklch(1.0000 0 0);
+    --border: oklch(0.3544 0.0066 248.0143);
+    --input: oklch(0.3544 0.0066 248.0143);
+    --ring: oklch(0.7003 0.1383 288.0130);
+    --chart-1: oklch(0.7884 0.1422 148.7410);
+    --chart-2: oklch(0.7003 0.1383 288.0130);
+    --chart-3: oklch(0.8988 0.0410 6.6128);
+    --chart-4: oklch(0.7720 0.0819 244.5793);
+    --chart-5: oklch(0.7058 0 0);
+    --sidebar: oklch(0.2138 0.0019 286.2347);
+    --sidebar-foreground: oklch(0.9551 0 0);
+    --sidebar-primary: oklch(0.7003 0.1383 288.0130);
+    --sidebar-primary-foreground: oklch(1.0000 0 0);
+    --sidebar-accent: oklch(0.3162 0.0099 260.7134);
+    --sidebar-accent-foreground: oklch(0.7003 0.1383 288.0130);
+    --sidebar-border: oklch(0.3544 0.0066 248.0143);
+    --sidebar-ring: oklch(0.7003 0.1383 288.0130);
+    --font-sans: Plus Jakarta Sans, sans-serif;
+    --font-serif: Lora, serif;
+    --font-mono: IBM Plex Mono, monospace;
+    --radius: 1rem;
+    --shadow-2xs: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.08);
+    --shadow-xs: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.08);
+    --shadow-sm: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-md: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 2px 4px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-lg: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 4px 6px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-xl: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.16), 0px 8px 10px -1px hsl(0 0% 10.1961% / 0.16);
+    --shadow-2xl: 0px 0px 3px 0px hsl(0 0% 10.1961% / 0.40);
 }
 
 @theme inline {
